Fixed issue with PDF background bleeding

--- a/app/assets/stylesheets/pdf.css.scss
+++ b/app/assets/stylesheets/pdf.css.scss
@@ -1,3 +1,7 @@
+.content_middle {
+  background: white;
+}
+
 .show_invoice{
   .primary_links{
     float:right;
